feat: add image url to swagger
