# src/routes/band.ts
@@ -1,11 +1,11 @@
 import express from 'express'
-import { getBandById, editBand} from '../controllers/band-controller'
+import {  editBand, getBand} from '../controllers/band-controller'
 import isAuth from '../middlewares/auth-middleware'
 
 
 const router = express.Router()
 
-router.get('/about-band/:bandId', isAuth, getBandById)
+router.get('/bands', getBand)
 router.patch('/edit-band/:bandId', isAuth,  editBand)
 
 export default router
